# dex-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
dex/: __init__.py  cli.py  config.py  git.py
dex/commands/: cmd_catch.py  cmd_config.py  cmd_delete.py  cmd_new.py
dex/templates/: __init__.py
dex/templates/contest/: .debug.h  a.cpp
