[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-cli"
# Your versioning can be dynamic or static.
# For simplicity, I'll set a static one.
version = "0.1.0"
description = "The dex is a high-tech electronic encyclopedia that developers have with them to record data on the varios species of projects they work during their journey."
authors = [
	{ name = "Luís Rafael Sena", email = "luisrafaelsna@gmail.com"}
]
readme = "README.md"
dependencies = [
	"click",
    # This is for Python < 3.9 for importlib.resources
    # 'importlib-resources; python_version < "3.9"', 
    # Let's keep it simple for now and assume 3.9+
]
requires-python = ">= 3.9" # Changed to 3.9 for cleaner importlib.resources

[project.scripts]
dex = "dex.cli:cli"

[tool.setuptools]
# This is CRITICAL for including your template files
include-package-data = true
